<resources>
    <string name="app_name">딜라이브 모바일 TV</string>
    <string name="wait_a_moment">잠시만 기다려 주십시오.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="intro_cnm">C&amp;M nScreen Service</string>
    <string name="title_activity_main">딜라이브 모바일 TV</string>
    <string name="vod_fragment1_title">딜라이브 모바일 TV</string>
    <string name="vod_fragment_topmenu_name1">추천</string>
    <string name="vod_fragment_topmenu_name2">영화</string>
    <string name="vod_fragment_topmenu_name3">키즈&amp;애니</string>
    <string name="vod_fragment_topmenu_name4">TV다시보기</string>
    <string name="vod_fragment_topmenu_name5">성인</string>
    <string name="vod_order_tab_name_realtime">실시간 인기순위</string>
    <string name="vod_order_tab_name_week">주간 인기순위</string>
    <string name="vod_detail_title">상세정보</string>
    <string name="error_network_timeout">네트웍 요청 시간이 초과했습니다.</string>
    <string name="error_network_servererror">서버로 부터 에러 응답을 받았습니다.</string>
    <string name="error_network_noconnectionerror">서버 접속에 실패 했습니다.</string>
    <string name="error_network_networkerrorr">네트웍 에러가 발생 했습니다.</string>
    <string name="error_not_paring_compleated">녹화 기능은 PVR 셋탑박스와 연동 시에만 사용하실 수 있습니다.</string>
    <string name="error_not_paring_compleated1">마이 딜라이브는 셋탑박스와 연동 시에만 사용하실 수 있습니다.</string>
    <string name="error_not_paring_compleated2">리모콘 기능은 HD/PVR 셋탑박스와 연동 시에만 사용하실 수 있습니다.</string>
    <string name="error_not_paring_compleated3">셋탑박스와 연결한 후 이용하실 수 있습니다.</string>
    <string name="error_not_paring_compleated4">셋탑박스 재 연동 시, 기존 연동은 해제 되며, 구매비밀번호 재설정이 필요합니다.</string>
    <string name="error_not_paring_compleated5">계속 진행하시겠습니까?</string>
    <string name="error_not_paring_compleated6">녹화예약을 삭제하시겠습니까?</string>
    <string name="error_not_paring_compleated7">VOD 기능은 셋탑박스와 연동 시에 사용하실 수 있습니다.</string>
    <string name="error_not_paring_compleated8">녹화예약을 하시겠습니까?</string>
    <string name="error_not_paring_compleated9">녹화물을 삭제하시겠습니까?</string>
    <string name="error_not_compatibility_stb">리모컨 미 지원 상품\n고객님의 셋탑박스에서는 리모컨 기능을 지원하지 않습니다.</string>
    <string name="error_not_play_vod">구매하신 VOD는 모바일용으로 준비 중에 있습니다.\n빠른 시일 내에 모바일에서 시청하실 수 있도록 조치하겠습니다.\n(본 VOD는 TV에서 시청 가능합니다.)</string>
    <string name="error_not_adult1">해당 콘텐트 시청을 위해서는 성인인증이 필요합니다.</string>
    <string name="error_not_adult2">성인인증을 진행하시겠습니까?</string>
    <string name="error_not_ability_change_channel_vod">VOD 시청중에는 채널이 변경되지 않습니다.</string>
    <string name="error_not_ability_change_channel_data">데이터 방송 시청 중에는 채널이 변경되지 않습니다.</string>
    <string name="error_not_ability_change_channel_independence">독립형 셋탑박스는 채널이 변경되지 않습니다.</string>
    <string name="error_not_remote_control_case1">VOD 시청 중에는 채널이 변경되지 않습니다.</string>
    <string name="error_not_remote_control_case2">데이터 방송 시청 중에는 채널이 변경되지 않습니다.</string>
    <string name="error_not_remote_control_case3">선택 하신 채널은 녹화 하실 수 없습니다.</string>
    <string name="success_purchase">구매가 완료되었습니다. [VOD 구매목록] 메뉴에서 구매내역을 확인하실 수 있습니다.</string>
    <string name="success_purchase_svod">월정액 가입이 완료되었습니다.\n셋탑박스의 [마이TV>서비스 이용목록>월정액 가입 목록]에서 가입 내역을 확인하실 수 있습니다.</string>
    <string name="whatSetTop">딜라이브 방송 서비스를 이용하고 계시는 고객님의 셋탑박스와 모바일 앱을 연동 하여 VOD 구매, 방송 시청 예약 등 다양한 서비스를 이용하실 수 있습니다.</string>
    <string name="RUMPUS_ERROR_MSG_Not_Found_authCode">인증번호가 일치하지 않습니다.</string>
    <string name="RUMPUS_ERROR_MSG_Not_Found_authCode1">인증번호를 입력해주세요.</string>
    <string name="title_activity_vod_detail">상세정보</string>
    <string name="title_activity_vod_detail_bundle">상세정보(묶음)</string>
    <string name="title_activity_epg_main">EpgMainActivity</string>
    <string name="title_activity_epg_choice">EpgChoiceActivity</string>
    <string name="title_activity_epg_sub">EpgSubActivity</string>
    <string name="search_title">검색</string>
    <string name="search_title_tab_text1">VOD 명 검색</string>
    <string name="search_title_tab_text2">TV프로그램 명 검색</string>
    <string name="search_keyword_empty_msg">검색 창에 원하시는 검색어를\n입력해주세요.</string>
    <string name="title_activity_pvr_main">PvrMainActivity</string>
    <string name="title_activity_pvr_sub">PvrSubActivity</string>
    <string name="title_activity_my_main">MyMainActivity</string>
    <string name="title_activity_my_sub">MySubActivity</string>
    <string name="title_activity_pairing_main">PairingMainActivity</string>
    <string name="title_activity_pairing_sub">PairingSubActivity</string>
    <string name="title_activity_pairing_check">PairingCheckActivity</string>
    <string name="title_activity_remote_controller">RemoteControllerActivity</string>
    <string name="title_activity_search_main">SearchMainActivity</string>
    <string name="title_activity_vod_buy">VodBuyActivity</string>
    <string name="title_activity_leftmenu">LeftMenuActivity</string>
    <string name="title_activity_leftmenu_dialog">LeftMenuDialogActivity</string>
    <string name="my_cnm_tab_text1">VOD구매목록</string>
    <string name="my_cnm_tab_text2">VOD시청목록</string>
    <string name="my_cnm_tab_text3">VOD찜목록</string>
    <string name="my_cnm_purchase_tab1">모바일 구매목록</string>
    <string name="my_cnm_purchase_tab2">TV 구매목록</string>
    <string name="my_cnm_alert_title_expired">VOD 유효기간 만료</string>
    <string name="my_cnm_alert_message1_expired">선택하신 VOD는 유효기간이 만료되어\n시청 및 구매가 제한된 상품입니다.</string>
    <string name="my_cnm_alert_message2_expired">해당 VOD는 목록에서 삭제됩니다.</string>
    <string name="setting_content">딜라이브 모바일 서비스를 효율적으로 이용하기 위해\n지역 설정, 인증번호 관리, 성인검색 제한설정, 성인인증 기능을 제공합니다.</string>
    <string name="setting_help_area_title">지역설정 이란?</string>
    <string name="setting_help_area_message">지역 별로 채널 가이드에 표시되는 채널 번호가\n동일하지 않는 경우가 있습니다.\n\n보다 원활한 서비스 이용을 위해 꼭\n지역 설정을 해주세요.</string>
    <string name="setting_help_purchase_auth_title">구매인증 비밀번호 관리 란?</string>
    <string name="setting_help_purchase_auth_message">고객 님께서 셋탑박스 연동과 함께 설정 하신 인증번호를 변경하는 서비스 입니다. 개인정보 보호와 콘텐트 이용관련 보안유지를 위해 주기 별로 간단한 인증 후 기존 인증번호를 변경해주세요.</string>
    <string name="setting_help_adult_search_title">성인검색 제한 설정이란?</string>
    <string name="setting_help_adult_search_message">성인 검색 제한 설정을 해제하시면 콘텐트 검색 시 검색 결과에 성인 콘텐트가 보여지지 않습니다.\n\n설정해제를 선택하실 경우 성인 컨텐츠를 포함한 모든 컨텐츠가 검색 결과에 보여집니다.</string>
    <string name="setting_help_adult_auth_title">성인인증 이란?</string>
    <string name="setting_help_adult_auth_message">성인 콘텐트를 시청하거나 성인 콘텐트 검색 제한을 해제하기 위해서는 성인인증이 필요합니다.\n\n간단한 절차를 통해 최초 1회 성인인증을 하시면, 이후부터는 성인인증 없이 성인 콘텐트를 보실 수 있습니다.</string>
    <string name="adult_auth_message">성인인증이 되지 않았습니다. 성인인증 이후 이용해 주세요.</string>
</resources>