<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30.25"
        android:layout_marginTop="@dimen/dimen_9.75"
        android:paddingLeft="@dimen/dimen_6"
        android:paddingRight="@dimen/dimen_6"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_tab_selector"
            android:text="@string/my_cnm_tab_text1"
            android:textColor="@color/btn_tab_selector_textcolor" />

        <TextView
            android:id="@+id/tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_tab_selector"
            android:text="@string/my_cnm_tab_text2"
            android:textColor="@color/btn_tab_selector_textcolor" />

        <TextView
            android:id="@+id/tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/btn_tab_selector"
            android:text="@string/my_cnm_tab_text3"
            android:textColor="@color/btn_tab_selector_textcolor" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/mycnmFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>